@@ -8,6 +8,7 @@ import org.example.weneedbe.domain.article.repository.ArticleLikeRepository;
 import org.example.weneedbe.domain.bookmark.domain.Bookmark;
 import org.example.weneedbe.domain.bookmark.repository.BookmarkRepository;
 import org.example.weneedbe.domain.user.domain.User;
+import org.example.weneedbe.domain.user.domain.UserArticle;
 import org.example.weneedbe.domain.user.dto.request.EditMyInfoRequest;
 import org.example.weneedbe.domain.user.dto.request.UserInfoRequest;
 import org.example.weneedbe.domain.user.dto.response.UserInfoResponse;
@@ -16,6 +17,7 @@ import org.example.weneedbe.domain.user.dto.response.mypage.EditMyInfoResponse;
 import org.example.weneedbe.domain.user.dto.response.mypage.GetMyInfoResponse;
 import org.example.weneedbe.domain.user.exception.InvalidProfileEditException;
 import org.example.weneedbe.domain.user.exception.UserNotFoundException;
+import org.example.weneedbe.domain.user.repository.UserArticleRepository;
 import org.example.weneedbe.domain.user.repository.UserRepository;
 import org.example.weneedbe.global.jwt.TokenProvider;
 import org.example.weneedbe.global.s3.application.S3Service;
@@ -25,6 +27,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
+import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -36,7 +39,7 @@ public class UserService {
     private final BookmarkRepository bookmarkRepository;
     private final ArticleLikeRepository articleLikeRepository;
     private final S3Service s3Service;
-
+    private final UserArticleRepository userArticleRepository;
     public Boolean checkNicknameDuplicate(String nickName) {
         return userRepository.existsByNickname(nickName);
     }
@@ -107,10 +110,39 @@ public class UserService {
         User user = userRepository.findById(userId).orElseThrow(UserNotFoundException::new);
 
         List<Bookmark> recruitingBookmarks = bookmarkRepository.findAllByUserAndArticle_ArticleTypeOrderByArticle_CreatedAtDesc(
-            user, Type.RECRUITING);
+                user, Type.RECRUITING);
 
-        return recruitingBookmarks.stream().map(s -> new MyPageArticleInfoResponse(s.getArticle(),
-            articleLikeRepository.countByArticle(s.getArticle()))).toList();
+        return recruitingBookmarks.stream().map(s -> {
+            List<String> teamProfiles = getTeamProfiles(s.getArticle().getArticleId());
+
+            return new MyPageArticleInfoResponse(s.getArticle(),
+                    articleLikeRepository.countByArticle(s.getArticle()),
+                    teamProfiles);
+        }).collect(Collectors.toList());
+    }
+
+    public List<MyPageArticleInfoResponse> getMyOutputInfo(String authorizationHeader) {
+        Long userId = getUserIdFromHeader(authorizationHeader);
+        User user = userRepository.findById(userId).orElseThrow(UserNotFoundException::new);
+
+        List<UserArticle> myOutputs = userArticleRepository.findAllByUserAndArticle_ArticleTypeOrderByArticle_CreatedAtDesc(
+                user, Type.PORTFOLIO);
+
+        return myOutputs.stream().map(s -> {
+            List<String> teamProfiles = getTeamProfiles(s.getArticle().getArticleId());
+
+            return new MyPageArticleInfoResponse(s.getArticle(),
+                    articleLikeRepository.countByArticle(s.getArticle()),
+                    teamProfiles);
+        }).collect(Collectors.toList());
+    }
+
+    // UserArticle 테이블에서 동일한 articleId에 속한 사용자들의 프로필 url을 List<String> 으로 반환하는 메서드
+    private List<String> getTeamProfiles(Long articleId) {
+        return userArticleRepository.findAllByArticle_ArticleId(articleId)
+                .stream()
+                .map(userArticle -> userArticle.getUser().getProfile())
+                .collect(Collectors.toList());
     }
 
     private Long getUserIdFromHeader(String authorizationHeader) {
